Remove timeline on small widths, fix border-radius at different sizes

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -99,6 +99,12 @@
   width: 90vw;
 }
 
+@media (max-width: 400px) {
+  .WorkExperienceTimeline {
+    display: none;
+  }
+}
+
 .WorkExperienceCard,
 .ProjectCard {
   min-height: 100% !important;
@@ -123,7 +129,7 @@
   height: 21vh;
   object-fit: cover;
   z-index: 2;
-  border-radius: 5%;
+  border-radius: 1vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -140,7 +146,7 @@
   height: 21vh;
   object-fit: cover;
   z-index: 2;
-  border-radius: 3%;
+  border-radius: 1vh;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -165,6 +171,7 @@
   border: 2.5vh solid white;
   z-index: 1;
   transition: 0.2s;
+  border-radius: 3.5vh;
 }
 
 .WorkExperienceTextContainer:hover,
@@ -174,37 +181,6 @@
   -webkit-transform: translatey(5px);
   transform: translatex(5px);
   transform: translatey(5px);
-}
-
-@media (max-width: 767px) {
-  .WorkExperienceTextContainer {
-    border-radius: 10%/8%;
-  }
-
-  .ProjectCardContainer {
-    border-radius: 6%;
-  }
-}
-
-@media (min-width: 768px) and (max-width: 1025px) {
-  .WorkExperienceTextContainer,
-  .ProjectCardContainer {
-    border-radius: 4%/8%;
-  }
-}
-
-@media (min-width: 1026px) and (max-width: 1499px) {
-  .WorkExperienceTextContainer,
-  .ProjectCardContainer {
-    border-radius: 2.5%/13%;
-  }
-}
-
-@media (min-width: 1500px) {
-  .WorkExperienceTextContainer,
-  .ProjectCardContainer {
-    border-radius: 1.5%/10%;
-  }
 }
 
 .WorkExperienceTextTitle,
